<resources>
    <string name="app_name">Bingo</string>
    <string name="enter_your_number">Enter your number</string>
    <string name="telephone_number_format">201234567</string>
    <string name="login_button">Login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="register_button">Register</string>
    <string name="register_message"> Is this your first time using this app?</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps_navigation_drawer">Maps</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_payment">Payment</string>
    <string name="menu_my_account">My Account</string>
    <string name="menu_your_deliveries">Your Deliveries</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_help">Help</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_rider">I\'m a Rider</string>
    <string name="button_customer">I\'m a Customer</string>\
    <string name="receive_code">You will receive a code on this number.</string>
    <string name="code_verification_hint">Enter your code here</string>
    <string name="verify_code_button">Verify</string>
    <string name="resend_code_button">Resend</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="invalid_code">Invalid Code</string>




</resources>
