<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_your_deliveries"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_your_deliveries" />
        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_payment" />
        <item
            android:id="@+id/nav_my_account"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_my_account" />

        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_contact_us" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_help" />
    </group>



</menu>
